# KIB_c_game_project_snake

./: .gitignore  CMAKELists.txt  CMakeLists.txt  Doxyfile  README.md  프로젝트_계획서_2조.hwp  프로젝트_기술서_2조.hwp
include/: db.h  display_snake.h
src/: Doxyfile  db.c  display_menu.c  display_record.c  display_snake.c  main.c  update.c
